Join with focus from left to right
Also some work on duplication context

refs #372

Change-Id: Ib1461023c8ebed5b2079330a7cc4c5699bed99ef
Reviewed-on: http://gerrit.esdi-community.eu/1091
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>